DATE        AUTHOR      CHANGE
---------- -----------  -------------------------------------------------------
2006-07-05 allenb       More refactoring of build system.
                        It is not possible to specify all variants to build
                        and build them simultaneously.
2006-06-30 allenb       Refatored the build system to support building on win32
                        using SCons.  This requires an in-development version
                        of scons-addons to get the EnvironmentBuilder.
2006-06-24 patrickh     Support building universal binaries on Mac OS X.
2006-06-13 allenb       Fixed bug in how NodePtr and DocumentPtr types were
                        defined.  Now explicitly declare Node and Document.
                        VERSION: 0.7.5
2006-06-06 dshipton     Version out includes and library
                        VERSION: 0.7.4
2006-06-05 allenb       Refactored the build system to remove AutoDist.
2006-06-02 dshipton     Install .pc file for pkg-config use
                        VERSION: 0.7.3
2006-02-07 allenb       Refactored the Attributes class to just be an std::map
                        of strings to attributes.
                        Added an attrib() method to Node that returns this map.
                        VERSION: 0.7.2
2006-05-06 allenb       Added ability to set options in OptionRepository.
                        Added saveOptionFile to OptionRepository.
                        Refactored OptionRepository to hold onto Doc node.
                        cppdom::Error now derived from std::exception
                        VERSION: 0.7.1
                        
[Version 0.6.0 released - 6.1.2005]============================================
2005-02-06 allenb       Added hasOption() method to OptionRepository
                        VERSION: 0.5.6
2005-02-04 allenb       Added ability to get children by path.
                        Added extension to assist with using xml files